<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eddae7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewCalculation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculation"
        android:textSize="30sp"
        android:textColor="#a68d9a"
        android:padding="16dp"
        android:layout_marginTop="175dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="50sp"
        android:textColor="#521434"
        android:padding="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textViewCalculation"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/AC"
        android:textColor="#FFFFFF"
        android:backgroundTint="#debdce"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPercent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPercent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/percent"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/buttonAC"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/slice"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/buttonPercent"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/times"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/buttonDivide"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonAC"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonPercent"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEquals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equals"
        android:textColor="#521434"
        android:backgroundTint="#debdce"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        android:textColor="#521434"
        android:backgroundTint="#faedf4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals" />

</androidx.constraintlayout.widget.ConstraintLayout>
